--- a/package.json
+++ b/package.json
@@ -3,31 +3,45 @@
   "version": "0.1.0",
   "description": "Parse RateLimit headers of various forms, including the combined form from draft 7 of the IETF standard, into a normalized format.",
   "type": "module",
-	"exports": {
-		".": {
-			"import": {
-				"types": "./dist/index.d.mts",
-				"default": "./dist/index.mjs"
-			},
-			"require": {
-				"types": "./dist/index.d.cts",
-				"default": "./dist/index.cjs"
-			}
-		}
-	},
-	"main": "./dist/index.cjs",
-	"module": "./dist/index.mjs",
-	"types": "./dist/index.d.ts",
-	"files": [
-		"dist/",
-		"tsconfig.json",
-		"package.json",
-		"readme.md",
-		"license.md",
-		"changelog.md"
-	],
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/",
+    "tsconfig.json",
+    "package.json",
+    "readme.md",
+    "license.md",
+    "changelog.md"
+  ],
   "scripts": {
-    "test": "jest"
+    "clean": "del-cli dist/ coverage/ *.log *.tmp *.bak *.tgz",
+    "build:cjs": "esbuild --platform=node --bundle --target=es2019 --format=cjs --outfile=dist/index.cjs source/index.ts",
+    "build:esm": "esbuild --platform=node --bundle --target=es2019 --format=esm --outfile=dist/index.mjs source/index.ts",
+    "build:types": "dts-bundle-generator --out-file=dist/index.d.ts source/index.ts && cp dist/index.d.ts dist/index.d.cts && cp dist/index.d.ts dist/index.d.mts",
+    "compile": "run-s clean build:*",
+    "lint:code": "xo --ignore test/external/",
+    "lint:rest": "prettier --ignore-path .gitignore --ignore-unknown --check .",
+    "lint": "run-s lint:*",
+    "format:code": "npm run lint:code -- --fix",
+    "format:rest": "npm run lint:rest -- --write .",
+    "format": "run-s format:*",
+    "test:lib": "jest",
+    "test": "run-s lint test:lib",
+    "pre-commit": "lint-staged",
+    "prepare": "run-s compile && husky install config/husky"
   },
   "repository": {
     "type": "git",
@@ -50,8 +64,16 @@
   "devDependencies": {
     "@jest/types": "^29.6.3",
     "@types/node": "^20.5.1",
+    "del-cli": "^5.0.0",
+    "dts-bundle-generator": "^8.0.1",
+    "esbuild": "^0.19.2",
+    "husky": "^8.0.3",
     "jest": "^29.6.3",
-    "ts-jest": "^29.1.1"
+    "lint-staged": "^14.0.1",
+    "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6",
+    "xo": "^0.56.0"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
@@ -73,5 +95,9 @@
     "moduleNameMapper": {
       "^(\\.{1,2}/.*)\\.js$": "$1"
     }
+  },
+  "dependencies": {
+    "@express-rate-limit/prettier": "^1.0.0",
+    "@express-rate-limit/tsconfig": "^1.0.0"
   }
 }
