--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
   },
   "homepage": "https://github.com/express-rate-limit/ratelimit-header-parser#readme",
   "devDependencies": {
+    "@express-rate-limit/prettier": "^1.0.0",
+    "@express-rate-limit/tsconfig": "^1.0.0",
+    "@jest/globals": "^29.6.3",
     "@jest/types": "^29.6.3",
     "@types/node": "^20.5.1",
     "del-cli": "^5.0.0",
@@ -96,8 +99,27 @@
       "^(\\.{1,2}/.*)\\.js$": "$1"
     }
   },
-  "dependencies": {
-    "@express-rate-limit/prettier": "^1.0.0",
-    "@express-rate-limit/tsconfig": "^1.0.0"
+  "xo": {
+    "prettier": true,
+    "rules": {
+      "@typescript-eslint/consistent-indexed-object-style": [
+        "error",
+        "index-signature"
+      ],
+      "n/no-unsupported-features/es-syntax": 0
+    },
+    "overrides": [
+      {
+        "files": "test/*.ts",
+        "rules": {
+          "@typescript-eslint/no-unsafe-argument": 0
+        }
+      }
+    ]
+  },
+  "prettier": "@express-rate-limit/prettier",
+  "lint-staged": {
+    "{source,test}/**/*.ts": "xo --fix",
+    "**/*.{json,yaml,md}": "prettier --ignore-path .gitignore --ignore-unknown --write "
   }
 }
