--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build:esm": "esbuild --platform=node --bundle --target=es2019 --format=esm --outfile=dist/index.mjs source/index.ts",
     "build:types": "dts-bundle-generator --out-file=dist/index.d.ts source/index.ts && cp dist/index.d.ts dist/index.d.cts && cp dist/index.d.ts dist/index.d.mts",
     "compile": "run-s clean build:*",
-    "lint:code": "xo --ignore test/external/",
+    "lint:code": "xo",
     "lint:rest": "prettier --ignore-path .gitignore --ignore-unknown --check .",
     "lint": "run-s lint:*",
     "format:code": "npm run lint:code -- --fix",
