--- a/examples/package.json
+++ b/examples/package.json
@@ -9,6 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
     "ratelimit-header-parser": "*"
   },
   "keywords": [],
