--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "ratelimit-header-parser",
   "version": "0.1.0",
-  "description": "Parse RateLimit headers of various forms, including the combined form from draft 7 of the IETF standard, into a normalized format.",
+  "description": "Parse `RateLimit` headers of various forms, including the combined form from draft 7 of the IETF standard, into a normalized format.",
+  "author": "Nathan Friedly <https://www.nfriedly.com/>",
+  "license": "MIT",
+  "homepage": "https://github.com/express-rate-limit/ratelimit-header-parser#readme",
+  "repository": "https://github.com/express-rate-limit/ratelimit-header-parser",
+  "keywords": [
+    "ratelimit",
+    "x-ratelimit-limit",
+    "headers",
+    "parser",
+    "express-rate-limit",
+    "ratelimit-policy"
+  ],
   "type": "module",
   "exports": {
     ".": {
@@ -26,78 +38,42 @@
     "license.md",
     "changelog.md"
   ],
+  "engines": {
+    "node": ">= 16"
+  },
   "scripts": {
     "clean": "del-cli dist/ coverage/ *.log *.tmp *.bak *.tgz",
-    "build:cjs": "esbuild --platform=node --bundle --target=es2019 --format=cjs --outfile=dist/index.cjs source/index.ts",
-    "build:esm": "esbuild --platform=node --bundle --target=es2019 --format=esm --outfile=dist/index.mjs source/index.ts",
-    "build:types": "dts-bundle-generator --out-file=dist/index.d.ts source/index.ts && cp dist/index.d.ts dist/index.d.cts && cp dist/index.d.ts dist/index.d.mts",
-    "compile": "run-s clean build:*",
+    "build": "pkgroll --src source/",
+    "compile": "run-s clean build",
     "lint:code": "xo",
     "lint:rest": "prettier --ignore-unknown --check .",
     "lint": "run-s lint:*",
-    "format:code": "npm run lint:code -- --fix",
-    "format:rest": "npm run lint:rest -- --write .",
+    "format:code": "xo --fix",
+    "format:rest": "prettier --ignore-unknown --write .",
     "format": "run-s format:*",
-    "test:lib": "jest",
+    "test:lib": "jest --config config/jest.json",
     "test": "run-s lint test:lib",
     "pre-commit": "lint-staged",
     "prepare": "run-s compile && husky install config/husky"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/express-rate-limit/ratelimit-header-parser.git"
-  },
-  "keywords": [
-    "ratelimit",
-    "x-ratelimit-limit",
-    "headers",
-    "parser",
-    "express-rate-limit",
-    "ratelimit-policy"
-  ],
-  "author": "Nathan Friedly <https://www.nfriedly.com/>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/express-rate-limit/ratelimit-header-parser/issues"
-  },
-  "homepage": "https://github.com/express-rate-limit/ratelimit-header-parser#readme",
   "devDependencies": {
-    "@express-rate-limit/prettier": "^1.0.0",
-    "@express-rate-limit/tsconfig": "^1.0.0",
-    "@jest/globals": "^29.6.3",
-    "@jest/types": "^29.6.3",
-    "@types/node": "^20.5.1",
-    "del-cli": "^5.0.0",
-    "dts-bundle-generator": "^8.0.1",
-    "esbuild": "^0.19.2",
-    "husky": "^8.0.3",
-    "jest": "^29.6.3",
-    "lint-staged": "^14.0.1",
-    "npm-run-all": "^4.1.5",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6",
-    "xo": "^0.56.0"
-  },
-  "jest": {
-    "preset": "ts-jest/presets/default-esm",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "source/**/*.ts"
-    ],
-    "testTimeout": 30000,
-    "testMatch": [
-      "**/test/*-test.ts"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "json",
-      "ts",
-      "tsx"
-    ],
-    "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1"
-    }
+    "@express-rate-limit/prettier": "1.1.0",
+    "@express-rate-limit/tsconfig": "1.0.0",
+    "@jest/globals": "29.6.3",
+    "@jest/types": "29.6.3",
+    "@types/node": "20.5.1",
+    "del-cli": "5.0.0",
+    "dts-bundle-generator": "8.0.1",
+    "esbuild": "0.19.2",
+    "husky": "8.0.3",
+    "jest": "29.6.3",
+    "lint-staged": "14.0.1",
+    "npm-run-all": "4.1.5",
+    "pkgroll": "1.11.0",
+    "ts-jest": "29.1.1",
+    "tsx": "3.12.7",
+    "typescript": "5.1.6",
+    "xo": "0.56.0"
   },
   "xo": {
     "prettier": true,
@@ -116,7 +92,9 @@
         }
       }
     ],
-    "ignores": ["examples/"]
+    "ignores": [
+      "examples/"
+    ]
   },
   "prettier": "@express-rate-limit/prettier",
   "lint-staged": {
