--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "format:code": "xo --fix",
     "format:rest": "prettier --ignore-unknown --write .",
     "format": "run-s format:*",
-    "test:lib": "cross-env NODE_NO_WARNINGS=1 NODE_OPTIONS=--experimental-vm-modules jest --config config/jest.json",
+    "test:lib": "jest",
     "test": "run-s lint test:lib",
     "pre-commit": "lint-staged",
     "prepare": "run-s compile && husky install config/husky"
