--- a/examples/package.json
+++ b/examples/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "tsx scripts/run-examples.ts"
+    "test": "tsx run-examples.ts"
   },
   "dependencies": {
+    "axios": "1.5.0",
     "express": "4.18.2",
     "express-rate-limit": "6.9.0",
     "ratelimit-header-parser": "../"
