--- a/examples/package.json
+++ b/examples/package.json
@@ -11,6 +11,7 @@
     "axios": "1.5.0",
     "express": "4.18.2",
     "express-rate-limit": "6.9.0",
+    "node-fetch": "3.3.2",
     "ratelimit-header-parser": "../"
   },
   "devDependencies": {
