--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,6 +72,9 @@ jobs:
     needs: [lint, test-library, test-examples]
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      id-token: write
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
@@ -82,13 +85,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Publish to npm
-        run: npm publish
+        run: npm publish --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Build package to upload to GitHub releases
         run: |
           npm pack
-          mv rratelimit-header-parser-*.tgz ratelimit-header-parser.tgz
+          mv ratelimit-header-parser-*.tgz ratelimit-header-parser.tgz
       - name: Create a Github release
         uses: softprops/action-gh-release@v1
         with:
